[tool.poetry]
name = "convex"
version = "0.1.0"
description = "Export playlists between your favorite services"
authors = ["Miguel Martín <miguel.martinr11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
